--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>My practice code with Github</title>
     </head>
     <body>
-        <h1>Github</h1>
+        <h1>My First work in Github</h1>
+        <p>Working on initial commands</p>
     </body>
 </html>
